Change tagline, add typescript badge, fix typo

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="profile-container container-block">
                 <img class="profile" src="assets/images/profile2.png" alt="" />
                 <h2 class="name">Serge Basset</h2>
-                <h3 class="tagline">Développeur Full Stack Freelance</h3>
+                <h3 class="tagline">Développeur Sénior Freelance<br />Full-Stack PHP/Javascript</h3>
             </div>
 
             <!--//contact-container-->
@@ -307,6 +307,11 @@
               </div>
 
               <div class="item">
+                <span class="label label-pill label-primary">
+                  Typescript
+                  <span class="badge badge-light">2+</span>
+                </span>
+
                 <span class="label label-pill label-success">
                   NextJS
                   <span class="badge badge-light">2+</span>
@@ -367,7 +372,7 @@
 
               <div class="item">
                 <h3 class="legend">Légende :</h3>
-                <p><small>Le chiffre dans le badge représente le nombres d'années d'expérience</small></p>
+                <p><small>Le chiffre dans le badge représente le nombre d'années d'expérience</small></p>
 
                 <span class="label label-pill label-primary">
                   Langages
