Add QR Code, update job title, add cities on jobs, fix typo

--- a/index.html
+++ b/index.html
@@ -53,7 +53,12 @@
           					</li>
                     <li class="resume">
                         <i class="fa fa-file-text-o" aria-hidden="true"></i>
-                        <a href="https://futurinformatique.github.io/index.html" target="_blank">CV en ligne</a>
+                        <a href="https://futurinformatique.github.io/index.html" target="_blank">
+                          CV en ligne : cliquez ou scanner
+                        </a>
+                        <a class="qrcode-link" href="https://futurinformatique.github.io/index.html" target="_blank">
+                          <img class="qrcode" src="assets/images/online-resume-qr-code.png" alt="QR Code to online resume">
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -396,12 +401,12 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Développeur Web Fullstack</h3>
+                            <h3 class="job-title">Développeur Fullstack PHP / JavaScript</h3>
                             <div class="time">2012 - Présent</div>
                         </div>
                     </div>
 
-                    <div class="company">Webikeo - Aix-en-Provence (<i class="fa fa-anchor"></i><a href="https://webikeo.fr" target="_blank">Site public Webikeo</a>)</div>
+                    <div class="company">Webikeo - Aix-en-Provence (13) [<i class="fa fa-anchor"></i><a href="https://webikeo.fr" target="_blank">Site public Webikeo</a> ]</div>
                     <div class="details">
                         <p>
                             Développement et maintenance d'une plateforme de webinar orientée B2B, avec back-end API REST en Symfony 5.4, front-end client en React 16, et front-end public en NextJS.<br />
@@ -415,29 +420,30 @@
                         </ul>
                     </div>
 
-                    <div class="company">Maison des Sciences Humaines - Lyon St Etienne</div>
+                    <div class="company">Maison des Sciences Humaines - Lyon St Etienne (69)</div>
                     <div class="details">
                         <p>
                             Conception et développement d'une application avec back-end en Symfony 3.4 et front-end en VueJS, le tout dialoguant uniquement via des API REST.<br />
-                            La plateforme permet le stockage, le visonnage, et le versionning de document sur un serveur Gitlab, sans que l'utilisateur ait besoin de manipuler Git.
+                            La plateforme permet le stockage, le visionnage, et le versionning de document sur un serveur Gitlab, sans que l'utilisateur ait besoin de manipuler Git.
                         </p>
                         <ul>
                             <li><em>Techno : </em>Framework Symfony 3.4, VueJS, Vuex, PHP7, HTML5, CCS3, Boostrap, Javascript ES6, Doctrine2, Composer, Gitlab API, Swagger</li>
                             <li><em>Outils : </em>Gitlab, Trello, Postman, PhpStorm, GitKraken</li>
+                            <li><em>Méthodologie : </em>Agile Scrum</li>
                         </ul>
                     </div>
 
-                    <div class="company">Decalog SAS</div>
+                    <div class="company">Decalog SAS - Guilherand-Granges (07)</div>
                     <div class="details">
                         <p>Contribution à divers projets en mode Saas, avec utilisation de diverses technologies web.</p>
                         <ul>
                             <li><em>Techno : </em>PHP5/7, HTML5, CCS3, Boostrap, Javascript, ReactJS, TypeScript, MySQL, Doctrine2, API REST Swagger, Composer, NodeJs, NPM</li>
                             <li><em>Outils : </em>VirtualBox, YouTrack, GitKraken, GitLab, Trello, NetBeans, PhpStorm, MySQL Workbench, Postman</li>
-                            <li><em>Methodologie : </em>Agile Scrum</li>
+                            <li><em>Méthodologie : </em>Agile Scrum</li>
                         </ul>
                     </div>
 
-                    <div class="company">Winzana</div>
+                    <div class="company">Winzana - Toulaud (07)</div>
                     <div class="details">
                         <p>
                             Développement d'une application sous Symfony 2, pour les pratiquants du domaine de la santé.<br />
@@ -445,7 +451,7 @@
                         </p>
                         <ul>
                             <li><em>Techno : </em>Framework Symfony2, PHP5, HTML5, CCS3, Boostrap, Twig, jQuery, Doctrine2, Composer</li>
-                            <li><em>Outils : </em>Git</li>
+                            <li><em>Outils : </em>Git, YouTrack, NetBeans, MySQL Workbench</li>
                         </ul>
                     </div>
                 </div>
