--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <ul class="list-unstyled interests-list">
                     <li>Jeux vidéos, Jeux de rôles</li>
                     <li>Moto, Voyages</li>
-                    <li>Spacial, astronomie</li>
+                    <li>Spatial, astronomie</li>
                     <li>Badminton, Airsoft</li>
                 </ul>
             </div>
