Add Angular, fix tags expertise duration

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     </div>
 
                     <div class="item">
-                        <h3 class="level-title">VueJS / Vuex</h3>
+                        <h3 class="level-title">VueJS / Angular</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="50%">
                             </div>
@@ -255,6 +255,11 @@
                   PHPUnit
                   <span class="badge badge-light">8+</span>
                 </span>
+
+                <span class="label label-pill label-default">
+                  NodeJS, NPM, Yarn
+                  <span class="badge badge-light">8+</span>
+                </span>
               </div>
 
               <div class="item">
@@ -285,6 +290,11 @@
               </div>
 
               <div class="item">
+                <span class="label label-pill label-primary">
+                  Typescript
+                  <span class="badge badge-light">4+</span>
+                </span>
+
                 <span class="label label-pill label-success">
                   Redux
                   <span class="badge badge-light">4+</span>
@@ -304,19 +314,9 @@
                   Miro
                   <span class="badge badge-light">4+</span>
                 </span>
-
-                <span class="label label-pill label-default">
-                  NodeJS, NPM, Yarn
-                  <span class="badge badge-light">4+</span>
-                </span>
               </div>
 
               <div class="item">
-                <span class="label label-pill label-primary">
-                  Typescript
-                  <span class="badge badge-light">2+</span>
-                </span>
-
                 <span class="label label-pill label-success">
                   NextJS
                   <span class="badge badge-light">2+</span>
@@ -360,18 +360,23 @@
 
               <div class="item">
                 <span class="label label-pill label-success">
+                  Angular
+                  <span class="badge badge-light">1+</span>
+                </span>
+
+                <span class="label label-pill label-success">
                   VueJS
-                  <span class="badge badge-light">1</span>
+                  <span class="badge badge-light">1+</span>
                 </span>
 
                 <span class="label label-pill label-success">
                   Vuex
-                  <span class="badge badge-light">1</span>
+                  <span class="badge badge-light">1+</span>
                 </span>
 
                 <span class="label label-pill label-warning">
                   Gitlab API
-                  <span class="badge badge-light">1</span>
+                  <span class="badge badge-light">1+</span>
                 </span>
               </div>
 
