Update freelance experience with Sodimas mission

--- a/index.html
+++ b/index.html
@@ -149,15 +149,7 @@
                     </div>
 
                     <div class="item">
-                        <h3 class="level-title">JavaScript / Cypress</h3>
-                        <div class="level-bar">
-                            <div class="level-bar-inner" data-level="90%">
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="item">
-                        <h3 class="level-title">NextJS</h3>
+                        <h3 class="level-title">JavaScript ES6+ / Cypress</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="90%">
                             </div>
@@ -173,15 +165,31 @@
                     </div>
 
                     <div class="item">
-                        <h3 class="level-title">StoryBook</h3>
+                        <h3 class="level-title">NextJS 12/13</h3>
                         <div class="level-bar">
-                            <div class="level-bar-inner" data-level="75%">
+                            <div class="level-bar-inner" data-level="80%">
                             </div>
                         </div>
                     </div>
 
                     <div class="item">
-                        <h3 class="level-title">VueJS / Angular</h3>
+                        <h3 class="level-title">Angular 17/18</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="70%">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <h3 class="level-title">StoryBook</h3>
+                        <div class="level-bar">
+                            <div class="level-bar-inner" data-level="70%">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+                        <h3 class="level-title">VueJS</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="50%">
                             </div>
@@ -210,7 +218,7 @@
                 </span>
 
                 <span class="label label-pill label-primary">
-                  JavaScript ES5 / ES6
+                  JavaScript ES6+
                   <span class="badge badge-light">10+</span>
                 </span>
 
@@ -225,7 +233,7 @@
                 </span>
 
                 <span class="label label-pill label-success">
-                  Symfony 5 / 4
+                  Symfony 4 / 5
                   <span class="badge badge-light">10+</span>
                 </span>
 
@@ -318,7 +326,7 @@
 
               <div class="item">
                 <span class="label label-pill label-success">
-                  NextJS
+                  NextJS 12 / 13
                   <span class="badge badge-light">2+</span>
                 </span>
 
@@ -360,7 +368,7 @@
 
               <div class="item">
                 <span class="label label-pill label-success">
-                  Angular
+                  Angular 17 / 18
                   <span class="badge badge-light">1+</span>
                 </span>
 
@@ -411,6 +419,20 @@
                         </div>
                     </div>
 
+                    <div class="company">Sodimas - Pont-de-l'Isère (26)</div>
+                    <div class="details">
+                        <p>
+                            Développement d'une application Angular 18 avec un back-end en PHP 8 fonctionnant en API.<br />
+                            L'application permet de configurer et de monitorer les gaines d'ascenseurs installées dans le batiment, les pupitres à chaque palier,
+                            et d'autres éléments connectés à l'installation.<br />
+                            Elle permet également de superviser le fonctionnement des ascenseurs en temps réel.
+                        </p>
+                        <ul>
+                            <li><em>Techno : </em>Angular 18, TypeScript, PHP 8.1, HTML5, CCS3, Boostrap, NodeJS, MySQL, PDO</li>
+                            <li><em>Outils : </em>Gitlab, PhpStorm, VirtualBox</li>
+                        </ul>
+                    </div>
+
                     <div class="company">Webikeo - Aix-en-Provence (13) [<i class="fa fa-anchor"></i><a href="https://webikeo.fr" target="_blank">Site public Webikeo</a> ]</div>
                     <div class="details">
                         <p>
@@ -445,18 +467,6 @@
                             <li><em>Techno : </em>PHP5/7, HTML5, CCS3, Boostrap, Javascript, ReactJS, TypeScript, MySQL, Doctrine2, API REST Swagger, Composer, NodeJs, NPM</li>
                             <li><em>Outils : </em>VirtualBox, YouTrack, GitKraken, GitLab, Trello, NetBeans, PhpStorm, MySQL Workbench, Postman</li>
                             <li><em>Méthodologie : </em>Agile Scrum</li>
-                        </ul>
-                    </div>
-
-                    <div class="company">Winzana - Toulaud (07)</div>
-                    <div class="details">
-                        <p>
-                            Développement d'une application sous Symfony 2, pour les pratiquants du domaine de la santé.<br />
-                            Elle permet le recensement dans un annuaire par ville et par type de pratique de santé, la prise de rendez-vous en ligne, etc ...
-                        </p>
-                        <ul>
-                            <li><em>Techno : </em>Framework Symfony2, PHP5, HTML5, CCS3, Boostrap, Twig, jQuery, Doctrine2, Composer</li>
-                            <li><em>Outils : </em>Git, YouTrack, NetBeans, MySQL Workbench</li>
                         </ul>
                     </div>
                 </div>
@@ -515,7 +525,7 @@
                     If you'd like to use the template without the attribution, you can check out other license options via our website: themes.3rdwavemedia.com
                     <small class="copyright">Designed with <i class="fa fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
                 -->
-                <div class="mb-30">Serge Basset - 2024.04</div>
+                <div class="mb-30">Serge Basset - 2024.07</div>
                 <div>
                     <small>Designed with <i class="fa fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
                 </div>
