Update skills for API RESTful, update job's details

--- a/index.html
+++ b/index.html
@@ -255,6 +255,11 @@
 
               <div class="item">
                 <span class="label label-pill label-success">
+                  API RESTful
+                  <span class="badge badge-light">8+</span>
+                </span>
+
+                <span class="label label-pill label-success">
                   React 16
                   <span class="badge badge-light">8+</span>
                 </span>
@@ -316,6 +321,16 @@
                 <span class="label label-pill label-success">
                   Immutable
                   <span class="badge badge-light">4+</span>
+                </span>
+
+                <span class="label label-pill label-default">
+                  OAuth2 / JWT
+                  <span class="badge badge-light">3+</span>
+                </span>
+
+                <span class="label label-pill label-default">
+                  GitLab CI/CD
+                  <span class="badge badge-light">3+</span>
                 </span>
 
                 <span class="label label-pill label-default">
@@ -386,6 +401,11 @@
                   Gitlab API
                   <span class="badge badge-light">1+</span>
                 </span>
+
+                <span class="label label-pill label-warning">
+                  AWS Cloud
+                  <span class="badge badge-light">1+</span>
+                </span>
               </div>
 
               <div class="item">
@@ -440,9 +460,9 @@
                             La plateforme permet aux utilisateurs de créer leurs webinars en ligne, gère les prises de rendez-vous avec les techniciens et comprends divers outils professionnels (KPI, Emailing, accès limités, ...).
                         </p>
                         <ul>
-                            <li><em>Techno Back-end: </em>Symfony 5.4 (et 4.2), PHP7, Doctrine2, PHPUnit</li>
+                            <li><em>Techno Back-end: </em>Symfony 5.4 (et 4.2), PHP7, API RESTful, Doctrine2, PHPUnit</li>
                             <li><em>Techno Front-end: </em>NextJS, StoryBook, Prisma, Lerna, React 16, Redux, Cypress, HTML5, CCS3, Boostrap, Immutable</li>
-                            <li><em>Outils : </em>Docker, Composer, Bitbucket, Trello, Postman, PhpStorm, GitKraken, Miro, Zendesk, Timify</li>
+                            <li><em>Outils : </em>Docker, Composer, Bitbucket, GitLab CI/CD, OAuth2 JWT, Trello, Postman, PhpStorm, GitKraken, Miro, Zendesk, Timify</li>
                             <li><em>Méthodologie : </em>Agile Scrum</li>
                         </ul>
                     </div>
@@ -454,8 +474,8 @@
                             La plateforme permet le stockage, le visionnage, et le versionning de document sur un serveur Gitlab, sans que l'utilisateur ait besoin de manipuler Git.
                         </p>
                         <ul>
-                            <li><em>Techno : </em>Framework Symfony 3.4, VueJS, Vuex, PHP7, HTML5, CCS3, Boostrap, Javascript ES6, Doctrine2, Composer, Gitlab API, Swagger</li>
-                            <li><em>Outils : </em>Gitlab, Trello, Postman, PhpStorm, GitKraken</li>
+                            <li><em>Techno : </em>Framework Symfony 3.4, VueJS, Vuex, API RESTful, PHP7, HTML5, CCS3, Boostrap, Javascript ES6, Doctrine2, Composer, Gitlab API</li>
+                            <li><em>Outils : </em>Gitlab, Swagger, Trello, Postman, PhpStorm, GitKraken</li>
                             <li><em>Méthodologie : </em>Agile Scrum</li>
                         </ul>
                     </div>
@@ -464,8 +484,8 @@
                     <div class="details">
                         <p>Contribution à divers projets en mode Saas, avec utilisation de diverses technologies web.</p>
                         <ul>
-                            <li><em>Techno : </em>PHP5/7, HTML5, CCS3, Boostrap, Javascript, ReactJS, TypeScript, MySQL, Doctrine2, API REST Swagger, Composer, NodeJs, NPM</li>
-                            <li><em>Outils : </em>VirtualBox, YouTrack, GitKraken, GitLab, Trello, NetBeans, PhpStorm, MySQL Workbench, Postman</li>
+                            <li><em>Techno : </em>PHP5/7, HTML5, CCS3, Boostrap, Javascript, ReactJS, TypeScript, MySQL, Doctrine2, API RESTful, Composer, NodeJs, NPM</li>
+                            <li><em>Outils : </em>Swagger, VirtualBox, YouTrack, GitKraken, GitLab, Trello, NetBeans, PhpStorm, MySQL Workbench, Postman</li>
                             <li><em>Méthodologie : </em>Agile Scrum</li>
                         </ul>
                     </div>
