Fix skills pills color by type

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                   <span class="badge badge-light">4+</span>
                 </span>
 
-                <span class="label label-pill label-default">
+                <span class="label label-pill label-success">
                   OAuth2 / JWT
                   <span class="badge badge-light">3+</span>
                 </span>
@@ -397,13 +397,13 @@
                   <span class="badge badge-light">1+</span>
                 </span>
 
-                <span class="label label-pill label-warning">
-                  Gitlab API
+                <span class="label label-pill label-default">
+                  AWS Cloud
                   <span class="badge badge-light">1+</span>
                 </span>
 
                 <span class="label label-pill label-warning">
-                  AWS Cloud
+                  Gitlab API
                   <span class="badge badge-light">1+</span>
                 </span>
               </div>
